--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,6 +1,6 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
+annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_factory=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
@@ -27,11 +27,17 @@ dist.dir=dist
 dist.jar=${dist.dir}/JavaApplication1.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.GitHub-Online-Book-Manager=C:\\Users\\GaVisic\\Documents\\GitHub\\Online-Book-Manager
 file.reference.ojdbc7.jar=E:\\software\\ojdbc7.jar
+file.reference.rs2xml.jar=C:\\Users\\GaVisic\\Documents\\GitHub\\Online-Book-Manager\\rs2xml.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.ojdbc7.jar}
+    ${file.reference.ojdbc7.jar}:\
+    ${libs.eclipselink.classpath}:\
+    ${libs.beans-binding.classpath}:\
+    ${file.reference.GitHub-Online-Book-Manager}:\
+    ${file.reference.rs2xml.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
